include subtitle info

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
 	<a class="blog-post-title-link" href='/{{ post.short_path }}'>
 	  <h2 class="blog-post-title">{{ post.episode }} : {{ post.title }}</h2>
 	</a>
+	<p class="subtitle">{{ post.subtitle }}</p>
 	<p class="blog-post-meta">{{ post.date|date:"M j, Y" }}</p>
 
 	<p class="blog-post-audio">
