ep 26: echo, home automation, lex preview / ToS, lambda edge, step functions

--- a/pages/episodes/26/index.html
+++ b/pages/episodes/26/index.html
@@ -11,7 +11,7 @@ length: 36128956
 {% filter markdown %}
 
 - [alexa christmas tree](https://youtu.be/vr__nOZ4mQ4)
-  - [WeMo Switch](http://amzn.to/2iFAM8y)
+  - [WeMo Switch](http://www.belkin.com/us/F7C027/p/P-F7C027/)
   - [Python API to WeMo devices](https://github.com/iancmcc/ouimeaux)
   - [WeMo SDK retired](http://developers.belkin.com/wemo/sdk)
   - [raspberry pi IoT SDK](https://github.com/aws/aws-iot-device-sdk-python)
