--- a/pages/episodes/33/index.html
+++ b/pages/episodes/33/index.html
@@ -12,7 +12,7 @@ length: 20289191
 
   - google IO 2017
       - [kotlin official android support](https://android-developers.googleblog.com/2017/05/android-announces-support-for-kotlin.html)
-      - [steve yegge, WHy Kotlin is Better than Whatever Dumb Language You're Using](http://steve-yegge.blogspot.com/2017/05/why-kotlin-is-better-than-whatever-dumb.html)
+      - [steve yegge, Why Kotlin is Better than Whatever Dumb Language You're Using](http://steve-yegge.blogspot.com/2017/05/why-kotlin-is-better-than-whatever-dumb.html)
       - [google home phone calls](https://www.theverge.com/circuitbreaker/2017/5/17/15650214/google-home-phone-call-support-announced-io-2017)
       - [google assistent coming to iphone](https://techcrunch.com/2017/05/17/google-launches-google-assistant-on-the-iphone/)
       - [Cloud TPU (tensorflow)](https://cloud.google.com/tpu/)
