ep 35: dynamoDB autoscaling, mary meeker's internet trends, AWS security

--- a/pages/episodes/34/index.html
+++ b/pages/episodes/34/index.html
@@ -3,7 +3,7 @@ title: white label lambda service
 subtitle: twilio functions, github marketplace, kotlin lambda
 date: 06-24-2017 4:05pm
 duration: 41:00
-length: 
+length: 29899153
 
 {% extends "post.html" %}
 {% block body %}
