--- a/pages/episodes/42/index.html
+++ b/pages/episodes/42/index.html
@@ -1,6 +1,6 @@
 episode: 42
 title: kotlinconf 2017
-subtitle: kotlin conf, some of our highlights, software 2.0 / deep learning is eating softwware
+subtitle: kotlin conf, some of our highlights, software 2.0 / deep learning is eating software
 date: 12-19-2017 11:10am
 duration: 39:27
 length: 22755380
